--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <link rel="stylesheet" href="./svg/favicon.svg" type="image/svg+xml"/>
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml"/>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -52,9 +52,14 @@
       <section class="section_block">
         <h2 class="block_text_title">Фритрек и нулевой спринт: Подготовка к работе</h2>
         <wrapper class="wrapper">
-          <!-- <article class="block_picture">
-            <img class="picture" src="./images/image_1.png" loading="lazy" alt="Анимированное изображение фургона в ночи">
-          </article> -->
+          <article class="block_picture">
+            <wrapper-watermark class="watermark">
+              <a class="watermark-text">
+                &lt;/HTML>
+              </a>
+              <img class="picture" src="./images/image_1.png" loading="lazy" alt="Анимированное изображение фургона в ночи">
+            </wrapper-watermark>
+          </article>
           <article class="block_paragraph">
             <p class="block_text">
               Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.
@@ -91,11 +96,16 @@
           </article>
         </wrapper>
       </section>
-      <!-- <section class="section_block">
+      <section class="section_block">
         <h2 class="block_text_title">1 спринт: Я — чистый лист</h2>
         <wrapper class="wrapper">
           <article class="block_picture">
-            <img class="picture" src="./images/image_2.png" loading="lazy" alt="Фургон, тот же автор, меньше яркость">
+            <wrapper-watermark class="watermark">
+              <a class="watermark-text">
+                &lt;/HTML>
+              </a>
+              <img class="picture" src="./images/image_2.png" loading="lazy" alt="Фургон, тот же автор, меньше яркость">
+            </wrapper-watermark>
           </article>
           <article class="block_paragraph">
             <p class="block_text">
@@ -117,7 +127,12 @@
         <h2 class="block_text_title">1 спринт: А если не получится?</h2>
         <wrapper class="wrapper">
           <article class="block_picture">
-            <img class="picture" src="./images/image_3.png" loading="lazy" alt="Это опять фургон, только цвета поменялись, больше розового">
+            <wrapper-watermark class="watermark">
+              <a class="watermark-text">
+                &lt;CSS>
+              </a>
+              <img class="picture" src="./images/image_3.png" loading="lazy" alt="Это опять фургон, только цвета поменялись, больше розового">
+            </wrapper-watermark>
           </article>
           <article>
             <p class="block_text">
@@ -139,7 +154,12 @@
         <h2 class="block_text_title">2 спринт: Погоня за идеалом</h2>
         <wrapper class="wrapper">
           <article class="block_picture">
-            <img class="picture" src="./images/image_4.png" loading="lazy" alt="Не ошиблись, фургон, больше фиолетового оттенка">
+            <wrapper-watermark class="watermark">
+              <a class="watermark-text">
+                &lt;desigions>
+              </a>
+              <img class="picture" src="./images/image_4.png" loading="lazy" alt="Не ошиблись, фургон, больше фиолетового оттенка">
+            </wrapper-watermark>
           </article>
           <article>
             <p class="block_text">
@@ -161,7 +181,12 @@
         <h2 class="block_text_title">2 спринт: О тех, кто рядом</h2>
         <wrapper class="wrapper">
           <article class="block_picture">
-            <img class="picture" src="./images/image_5.png" loading="lazy" alt="Тут фильтр, словно пленка засвечена, но что-то осталось видно">
+            <wrapper-watermark class="watermark">
+              <a class="watermark-text">
+                care
+              </a>
+              <img class="picture" src="./images/image_5.png" loading="lazy" alt="Тут фильтр, словно пленка засвечена, но что-то осталось видно">
+            </wrapper-watermark>
           </article>
           <article>
             <p class="block_text">
@@ -183,7 +208,12 @@
         <h2 class="block_text_title">3 спринт: Обходные стратегии</h2>
         <wrapper class="wrapper">
           <article class="block_picture">
-            <img class="picture" src="./images/image_6.png" loading="lazy" alt="Фургон, черно-белый">
+            <wrapper-watermark class="watermark">
+              <a class="watermark-text">
+                &lt;support>
+              </a>
+              <img class="picture" src="./images/image_6.png" loading="lazy" alt="Фургон, черно-белый">
+            </wrapper-watermark>
           </article>
           <article>
             <p class="block_text">
@@ -200,12 +230,17 @@
             </button>
           </article>
         </wrapper>
-      </section>
+      </section> 
       <section class="section_block">
         <h2 class="block_text_title">3 спринт: Когда опускаются руки</h2>
         <wrapper class="wrapper">
           <article class="block_picture">
-            <img class="picture" src="./images/image_7.png" loading="lazy" alt="Размытое изображение, такая стиллизация">
+            <wrapper-watermark class="watermark">
+              <a class="watermark-text">
+                &lt;lifes-style: none;>
+              </a>
+              <img class="picture" src="./images/image_7.png" loading="lazy" alt="Размытое изображение, такая стиллизация">
+            </wrapper-watermark>
           </article>
           <article>
             <p class="block_text">
@@ -222,12 +257,17 @@
             </button>
           </article>
         </wrapper>
-      </section>
+      </section> 
       <section class="section_block">
         <h2 class="block_text_title">«Сейчас я здесь»</h2>
         <wrapper class="wrapper">
           <article class="block_picture">
-            <img class="picture" src="./images/image_8.png" loading="lazy" alt="Фургон, фильтр на изображении с противоположными оригиналу оттенками">
+            <wrapper-watermark class="watermark">
+              <a class="watermark-text">
+                &lt;experience>
+              </a>
+              <img class="picture" src="./images/image_8.png" loading="lazy" alt="Фургон, фильтр на изображении с противоположными оригиналу оттенками">
+            </wrapper-watermark>
           </article>
           <article>
             <p class="block_text">
@@ -236,15 +276,15 @@
             <p class="block_text">
               Ученье - свет.
             </p>
-          </article>
+          </article> 
           <article class="block_button">
             <button></button>
             <button class="card__like-button">
               <a class="button__text">Like</a>
             </button>
-          </article>
+          </article> 
         </wrapper>
-      </section> -->
+      </section>  
     </main>
     <footer class="footer">
       <dialog class="dialog" id="dialog-id">
