Настроен градиент, проработаны размеры меню тем

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
           <article class="block_paragraph">
             <p class="block_text">
               Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.
+            еще немного, совсем немного контента, чтобы проверить как текст заполняет поля и небеса
+            еще немного, совсем немного контента, чтобы проверить как текст заполняет поля и небеса
+            еще немного, совсем немного контента, чтобы проверить как текст заполняет поля и небеса
+            еще немного, совсем немного контента, чтобы проверить как текст заполняет поля и небеса
             </p>
             <p class="block_text">
               Как учёба повлияет на тебя?
