Внесение правок ревью 1

--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="ru">
   <head>
     <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml"/>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="color-scheme" content="dark light">
     <title>Закрывающий тег</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/variables.css" />
-    <link rel="stylesheet" href="./styles/globals.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/animations.css" />
-    <link rel="stylesheet" href="./styles/themes.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css"/>
+    <link rel="stylesheet" href="./styles/variables.css"/>
+    <link rel="stylesheet" href="./styles/globals.css"/>
+    <link rel="stylesheet" href="./styles/animations.css"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
+    <link rel="stylesheet" href="./styles/themes.css"/>
     <script src="./scripts/set-theme.js"></script>
   </head>
-  <body class="page theme-dark cover">
+  <body class="page cover">
     <header class="header">
       <a class="header__text">
         &lt;/HTML>
@@ -51,24 +51,22 @@
     <main class="main">
       <article class="section_block">
         <h2 class="block_text_title">Фритрек и нулевой спринт: Подготовка к работе</h2>
-        <div class="block_picture">
-          <wrapper-watermark class="watermark">
-            <a class="watermark-text">
+          <figure class="watermark">
+            <figcaption class="watermark-text">
               &lt;/HTML>
-            </a>
-            <img class="picture filter_contrast" src="./images/image_1.png" loading="lazy" alt="Анимированное изображение фургона в ночи">
-          </wrapper-watermark>
-        </div>
+            </figcaption>
+            <img class="picture" src="./images/image_1.png" loading="lazy" alt="Анимированное изображение фургона в ночи">
+          </figure>
         <div class="block_paragraph">
           <p class="block_text">
             Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.
           <p class="block_text">
-            Как учёба повлияет на тебя?
+            Как учёба повлияет на тебя? Как учёба повлияет на тебя?
           </p>
         </div>
         <div class="block_button">
           <button class="card__icon-button">
-            <svg class="like-icon" alt="Иконка лайка" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
                 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 
@@ -89,20 +87,18 @@
             </svg>
           </button>
           <button class="card__like-button">
-            <a class="button__text">Like</a>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article>
       <article class="section_block">
         <h2 class="block_text_title">1 спринт: Я — чистый лист</h2>
-        <div class="block_picture">
-          <wrapper-watermark class="watermark">
-            <a class="watermark-text">
+          <figure class="watermark">
+            <figcaption class="watermark-text">
               &lt;/HTML>
-            </a>
+            </figcaption>
             <img class="picture" src="./images/image_2.png" loading="lazy" alt="Фургон, тот же автор, меньше яркость">
-          </wrapper-watermark>
-        </div>
+          </figure>
         <div class="block_paragraph">
           <p class="block_text">
             На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?
@@ -113,7 +109,7 @@
         </div>
         <div class="block_button">
           <button class="card__icon-button">
-            <svg class="like-icon" alt="Иконка лайка" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
                 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 
@@ -134,20 +130,18 @@
             </svg>
           </button>
           <button class="card__like-button">
-            <a class="button__text">Like</a>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article>
       <article class="section_block">
         <h2 class="block_text_title">1 спринт: А если не получится?</h2>
-        <div class="block_picture">
-          <wrapper-watermark class="watermark">
-            <a class="watermark-text">
+          <figure class="watermark">
+            <figcaption class="watermark-text">
               &lt;CSS>
-            </a>
+            </figcaption>
             <img class="picture" src="./images/image_3.png" loading="lazy" alt="Это опять фургон, только цвета поменялись, больше розового">
-          </wrapper-watermark>
-        </div>
+          </figure>
         <div class="block_paragraph">
           <p class="block_text">
             Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
@@ -158,7 +152,7 @@
         </div>
         <div class="block_button">
           <button class="card__icon-button">
-            <svg class="like-icon" alt="Иконка лайка" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
                 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 
@@ -179,31 +173,29 @@
             </svg>
           </button>
           <button class="card__like-button">
-            <a class="button__text">Like</a>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article>
       <article class="section_block">
         <h2 class="block_text_title">2 спринт: Погоня за идеалом</h2>
-        <div class="block_picture">
-          <wrapper-watermark class="watermark">
-            <a class="watermark-text">
+          <figure class="watermark">
+            <figcaption class="watermark-text">
               &lt;desigions>
-            </a>
+            </figcaption>
             <img class="picture" src="./images/image_4.png" loading="lazy" alt="Не ошиблись, фургон, больше фиолетового оттенка">
-          </wrapper-watermark>
-        </div>
+          </figure>
         <div class="block_paragraph">
           <p class="block_text">
             На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.
           </p>
           <p class="block_text">
-            Паника уходит, мозги рабочие.
+            Паника уходит, мозги рабочие. Паника уходит, мозги рабочие.
           </p>
         </div>
         <div class="block_button">
           <button class="card__icon-button">
-            <svg class="like-icon" alt="Иконка лайка" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
                 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 
@@ -224,31 +216,31 @@
             </svg>
           </button>
           <button class="card__like-button">
-            <a class="button__text">Like</a>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article>
       <article class="section_block">
         <h2 class="block_text_title">2 спринт: О тех, кто рядом</h2>
-        <div class="block_picture">
-          <wrapper-watermark class="watermark">
-            <a class="watermark-text">
+          <figure class="watermark">
+            <figcaption class="watermark-text">
               care
-            </a>
+            </figcaption>
             <img class="picture" src="./images/image_5.png" loading="lazy" alt="Тут фильтр, словно пленка засвечена, но что-то осталось видно">
-          </wrapper-watermark>
-        </div>
+          </figure>
         <div class="block_paragraph">
           <p class="block_text">
             Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если очередной макет просто так не поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли? 
           </p>
           <p class="block_text">
-            Супруга, в начале курса, говорила что гордится мной, потому что кодить сложно. Потом перестала. Видимо я прокачался.
+            Супруга, в начале курса, говорила что гордится мной, 
+            <!-- потому что кодить сложно. 
+            Потом перестала. Видимо я прокачался. -->
           </p>
         </div>
         <div class="block_button">
           <button class="card__icon-button">
-            <svg class="like-icon" alt="Иконка лайка" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
                 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 
@@ -269,31 +261,30 @@
             </svg>
           </button>
           <button class="card__like-button">
-            <a class="button__text">Like</a>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article>
       <article class="section_block">
         <h2 class="block_text_title">3 спринт: Обходные стратегии</h2>
-        <div class="block_picture">
-          <wrapper-watermark class="watermark">
-            <a class="watermark-text">
+          <figure class="watermark">
+            <figcaption class="watermark-text">
               &lt;support>
-            </a>
+            </figcaption>
             <img class="picture" src="./images/image_6.png" loading="lazy" alt="Фургон, черно-белый">
-          </wrapper-watermark>
-        </div>
+          </figure>
         <div class="block_paragraph">
           <p class="block_text">
             На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.
           </p>
           <p class="block_text">
-            Вечером просто тупик, на утро очевидное решение. Отдых и итерации важны.
+            Вечером просто тупик, на утро очевидное решение. 
+            <!-- Отдых и итерации важны. -->
           </p>
         </div>
         <div class="block_button">
           <button class="card__icon-button">
-            <svg class="like-icon" alt="Иконка лайка" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
                 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 
@@ -314,31 +305,30 @@
             </svg>
           </button>
           <button class="card__like-button">
-            <a class="button__text">Like</a>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article> 
       <article class="section_block">
         <h2 class="block_text_title">3 спринт: Когда опускаются руки</h2>
-        <div class="block_picture">
-          <wrapper-watermark class="watermark">
-            <a class="watermark-text">
+          <figure class="watermark">
+            <figcaption class="watermark-text">
               &lt;lifes-style: none;>
-            </a>
+            </figcaption>
             <img class="picture" src="./images/image_7.png" loading="lazy" alt="Размытое изображение, такая стиллизация">
-          </wrapper-watermark>
-        </div>
+          </figure>
         <div class="block_paragraph">
           <p class="block_text">
             Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна концентрация. Вспомните, откуда вы её черпали.
           </p>
           <p class="block_text">
-            Руки не опускались. Притуплялись чувства. Помогало общение в действующими.
+            Руки не опускались. Притуплялись чувства. 
+            <!-- Помогало общение в действующими. -->
           </p>
         </div>
         <div class="block_button">
           <button class="card__icon-button">
-            <svg class="like-icon" alt="Иконка лайка" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
                 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 
@@ -359,31 +349,30 @@
             </svg>
           </button>
           <button class="card__like-button">
-            <a class="button__text">Like</a>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article> 
       <article class="section_block">
         <h2 class="block_text_title">«Сейчас я здесь»</h2>
-        <div class="block_picture">
-          <wrapper-watermark class="watermark">
-            <a class="watermark-text">
+          <figure class="watermark">
+            <figcaption class="watermark-text">
               &lt;experience>
-            </a>
+            </figcaption>
             <img class="picture" src="./images/image_8.png" loading="lazy" alt="Фургон, фильтр на изображении с противоположными оригиналу оттенками">
-          </wrapper-watermark>
-        </div>
+          </figure>
         <div class="block_paragraph">
           <p class="block_text">
             Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир постоянно меняется. Познать его полностью не получится, но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть результат.
           </p>
           <p class="block_text">
             Ученье - свет.
+            Ученье - свет. Ученье - свет. Ученье - свет. Ученье - свет. Ученье - свет. Ученье - свет.
           </p>
         </div> 
         <div class="block_button">
           <button class="card__icon-button">
-            <svg class="like-icon" alt="Иконка лайка" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
                 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 
@@ -404,7 +393,7 @@
             </svg>
           </button>
           <button class="card__like-button">
-            <a class="button__text">Like</a>
+            <span class="button__text">Like</span>
           </button>
         </div> 
       </article>  
@@ -416,7 +405,7 @@
             <svg class="floppy" width="40" height="40" viewBox="0 0 40 40">
               <use href="./svg/floppy.svg#floppy"></use>
             </svg>
-            <a class="button__text"> Вставьте<br>дискету,чтобы<br> продолжить</a>
+            <h3 class="button__text"> Вставьте<br>дискету,чтобы<br> продолжить</h3>
           </div>
           <button class="submit__text" type="submit">ок</button>
         </form>
@@ -427,7 +416,7 @@
         <svg class="floppy" width="40" height="40" viewBox="0 0 40 40">
           <use href="./svg/floppy.svg#floppy"></use>
         </svg>
-        <a class="button__text">Сохранить на память</a>
+        <span class="button__text">Сохранить на память</span>
       </button>
     </footer>
     <script src="./scripts/like.js"></script>
