Внесение правок ревью 1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body class="page cover">
     <header class="header">
       <a class="header__text">
-        &lt;/HTML>
+        &lt;/HTML&GT;
       </a>
       <h1 class="header__title">
         закрывающий тег
@@ -26,7 +26,7 @@
       <nav class="theme-menu header__theme-menu">
         <ul class="theme-menu__list">
           <li class="theme-menu__item">
-            <button type="button" data-theme="dark" class="theme-menu__button">
+            <button type="button" data-theme="dark" class="theme-menu__button" aria-label="Тёмная">
               Темно
             </button>
           </li>
@@ -36,12 +36,13 @@
               data-theme="auto"
               disabled
               class="theme-menu__button"
+              aria-label="Авто"
             >
               Авто
             </button>
           </li>
           <li class="theme-menu__item">
-            <button type="button" data-theme="light" class="theme-menu__button">
+            <button type="button" data-theme="light" class="theme-menu__button" aria-label="Светлая">
               Светло
             </button>
           </li>
@@ -61,11 +62,11 @@
           <p class="block_text">
             Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.
           <p class="block_text">
-            Как учёба повлияет на тебя? Как учёба повлияет на тебя?
+            Как учёба повлияет на тебя?
           </p>
         </div>
         <div class="block_button">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button" aria-label="Иконка лайка">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
@@ -86,7 +87,7 @@
               13H3V16H0V13Z" fill="#FF0000"/>
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button" aria-label="Лайк">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -108,7 +109,7 @@
           </p>
         </div>
         <div class="block_button">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button" aria-label="Иконка лайка">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
@@ -129,7 +130,7 @@
               13H3V16H0V13Z" fill="#FF0000"/>
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button" aria-label="Лайк">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -151,7 +152,7 @@
           </p>
         </div>
         <div class="block_button">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button" aria-label="Иконка лайка">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
@@ -172,7 +173,7 @@
               13H3V16H0V13Z" fill="#FF0000"/>
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button" aria-label="Лайк">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -190,11 +191,11 @@
             На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.
           </p>
           <p class="block_text">
-            Паника уходит, мозги рабочие. Паника уходит, мозги рабочие.
+            Паника уходит, мозги рабочие.
           </p>
         </div>
         <div class="block_button">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button" aria-label="Иконка лайка">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
@@ -215,7 +216,7 @@
               13H3V16H0V13Z" fill="#FF0000"/>
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button" aria-label="Лайк">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -234,12 +235,12 @@
           </p>
           <p class="block_text">
             Супруга, в начале курса, говорила что гордится мной, 
-            <!-- потому что кодить сложно. 
-            Потом перестала. Видимо я прокачался. -->
+            потому что кодить сложно. 
+            Потом перестала. Видимо я прокачался.
           </p>
         </div>
         <div class="block_button">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button" aria-label="Иконка лайка">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
@@ -260,7 +261,7 @@
               13H3V16H0V13Z" fill="#FF0000"/>
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button" aria-label="Лайк">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -279,11 +280,11 @@
           </p>
           <p class="block_text">
             Вечером просто тупик, на утро очевидное решение. 
-            <!-- Отдых и итерации важны. -->
+            Отдых и итерации важны.
           </p>
         </div>
         <div class="block_button">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button" aria-label="Иконка лайка">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
@@ -304,7 +305,7 @@
               13H3V16H0V13Z" fill="#FF0000"/>
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button" aria-label="лайк">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -323,11 +324,11 @@
           </p>
           <p class="block_text">
             Руки не опускались. Притуплялись чувства. 
-            <!-- Помогало общение в действующими. -->
+            Помогало общение в действующими.
           </p>
         </div>
         <div class="block_button">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button" aria-label="Иконка лайка">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
@@ -348,7 +349,7 @@
               13H3V16H0V13Z" fill="#FF0000"/>
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button" aria-label="Лайк">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -367,11 +368,10 @@
           </p>
           <p class="block_text">
             Ученье - свет.
-            Ученье - свет. Ученье - свет. Ученье - свет. Ученье - свет. Ученье - свет. Ученье - свет.
           </p>
         </div> 
         <div class="block_button">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button" aria-label="Иконка лайка">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9
@@ -392,7 +392,7 @@
               13H3V16H0V13Z" fill="#FF0000"/>
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button" aria-label="Лайк">
             <span class="button__text">Like</span>
           </button>
         </div> 
@@ -405,9 +405,11 @@
             <svg class="floppy" width="40" height="40" viewBox="0 0 40 40">
               <use href="./svg/floppy.svg#floppy"></use>
             </svg>
-            <h3 class="button__text"> Вставьте<br>дискету,чтобы<br> продолжить</h3>
+            <h3 class="button__text"> Вставьте<br>дискету, чтобы<br> продолжить</h3>
           </div>
-          <button class="submit__text" type="submit">ок</button>
+          <button class="submit__text" type="submit">
+            <span class="button__text">ок</span>
+          </button>
         </form>
       </dialog>
       <button type="button"
